--- a/kernel/linux-nano-4.14-exp/arch/arm/boot/dts/Makefile
+++ b/kernel/linux-nano-4.14-exp/arch/arm/boot/dts/Makefile
@@ -939,7 +939,8 @@ dtb-$(CONFIG_MACH_SUN9I) += \
 	sun9i-a80-cubieboard4.dtb
 dtb-$(CONFIG_MACH_SUNIV) += \
 	suniv-f1c100s-licheepi-nano.dtb \
-	suniv-f1c100s-licheepi-nano-with-lcd.dtb
+	suniv-f1c100s-licheepi-nano-with-lcd.dtb \
+	suniv-f1c100s-suda.dtb
 dtb-$(CONFIG_ARCH_TANGO) += \
 	tango4-vantage-1172.dtb
 dtb-$(CONFIG_ARCH_TEGRA_2x_SOC) += \
